--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-3.17MB/s(Youtube:不良林), server: cn04.downloadmovie.cn, port: 65036, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn04.downloadmovie.cn}}
-  - {name: 🇵🇭 菲律宾-1.20MB/s(Youtube:不良林), server: flb.alinkrelay.com, port: 12000, type: trojan, password: 80114348-eea5-43b3-8705-2da4430d3074, sni: flb.alinkrelay.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.33MB/s(Youtube:不良林), server: 36.134.156.5, port: 65087, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
-  - {name: 🇭🇰 香港-3.48MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-657.2KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-1.96MB/s(Youtube:不良林), server: 116.129.254.177, port: 65092, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-6.83MB/s(Youtube:不良林), server: 111.45.22.136, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
+  - {name: 🇨🇳 中国-925.6KB/s(Youtube:不良林), server: 36.134.156.5, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
+  - {name: 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇺🇸 美国-3.46MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
   - {name: 🇨🇳 中国-864.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-3.64MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, skip-cert-verify: true}
   - {name: 🇨🇳 中国-2.57MB/s(Youtube:不良林), server: 116.129.254.177, port: 65034, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-326.6KB/s(Youtube:不良林), server: 120.233.150.146, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇨🇳 中国-1.02MB/s(Youtube:不良林), server: 120.233.150.146, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
   - {name: 🇸🇬 新加坡-2.85MB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
-      - 🇵🇭 菲律宾-1.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.48MB/s(Youtube:不良林)
-      - 🇬🇧 英国-657.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-925.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-864.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-326.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.85MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
-      - 🇵🇭 菲律宾-1.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.48MB/s(Youtube:不良林)
-      - 🇬🇧 英国-657.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-925.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-864.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-326.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.85MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,51 +52,50 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
-      - 🇵🇭 菲律宾-1.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.48MB/s(Youtube:不良林)
-      - 🇬🇧 英国-657.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-925.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-864.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-326.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.85MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-3.48MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
-      - 🇵🇭 菲律宾-1.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.48MB/s(Youtube:不良林)
-      - 🇬🇧 英国-657.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-925.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-864.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-326.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.85MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
-      - 🇵🇭 菲律宾-1.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.48MB/s(Youtube:不良林)
-      - 🇬🇧 英国-657.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-925.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-864.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-326.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.85MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -104,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
-      - 🇵🇭 菲律宾-1.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.48MB/s(Youtube:不良林)
-      - 🇬🇧 英国-657.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-925.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-864.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-326.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.85MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -129,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
-      - 🇵🇭 菲律宾-1.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.48MB/s(Youtube:不良林)
-      - 🇬🇧 英国-657.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-925.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-864.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-326.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.85MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
