--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.96MB/s(Youtube:不良林), server: 116.129.254.177, port: 65092, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-6.83MB/s(Youtube:不良林), server: 111.45.22.136, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
-  - {name: 🇨🇳 中国-925.6KB/s(Youtube:不良林), server: 36.134.156.5, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
-  - {name: 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇺🇸 美国-3.46MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.32MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.58MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.15MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
+  - {name: 🇨🇳 中国-6.58MB/s(Youtube:不良林), server: 116.129.254.177, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 波兰-1.23MB/s(Youtube:不良林), server: 217.30.10.67, port: 9093, type: ss, cipher: aes-256-cfb, password: wfLC2y7rzZyCmuyt}
+  - {name: 🇨🇳 中国-7.80MB/s(Youtube:不良林), server: 36.134.156.5, port: 65083, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
   - {name: 🇨🇳 中国-864.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-3.64MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, skip-cert-verify: true}
   - {name: 🇨🇳 中国-2.57MB/s(Youtube:不良林), server: 116.129.254.177, port: 65034, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
   - {name: 🇨🇳 中国-1.02MB/s(Youtube:不良林), server: 120.233.150.146, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇸🇬 新加坡-2.85MB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-3.75MB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-925.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.58MB/s(Youtube:不良林)
+      - 波兰-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.80MB/s(Youtube:不良林)
       - 🇨🇳 中国-864.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.85MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.75MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-925.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.58MB/s(Youtube:不良林)
+      - 波兰-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.80MB/s(Youtube:不良林)
       - 🇨🇳 中国-864.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.85MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.75MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-925.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.58MB/s(Youtube:不良林)
+      - 波兰-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.80MB/s(Youtube:不良林)
       - 🇨🇳 中国-864.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.85MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.75MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-925.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.58MB/s(Youtube:不良林)
+      - 波兰-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.80MB/s(Youtube:不良林)
       - 🇨🇳 中国-864.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.85MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.75MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-925.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.58MB/s(Youtube:不良林)
+      - 波兰-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.80MB/s(Youtube:不良林)
       - 🇨🇳 中国-864.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.85MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.75MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-925.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.58MB/s(Youtube:不良林)
+      - 波兰-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.80MB/s(Youtube:不良林)
       - 🇨🇳 中国-864.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.85MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.75MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-925.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.58MB/s(Youtube:不良林)
+      - 波兰-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.80MB/s(Youtube:不良林)
       - 🇨🇳 中国-864.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.85MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.75MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
