--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,13 +5,13 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.32MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.58MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.15MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇨🇳 中国-6.58MB/s(Youtube:不良林), server: 116.129.254.177, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 波兰-1.23MB/s(Youtube:不良林), server: 217.30.10.67, port: 9093, type: ss, cipher: aes-256-cfb, password: wfLC2y7rzZyCmuyt}
+  - {name: 🇺🇸 美国-5.54MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-543.4KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇺🇸 美国-1.84MB/s(Youtube:不良林), server: 38.68.135.18, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇯🇵 日本-3.60MB/s(Youtube:不良林), server: 85.208.108.93, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇺🇸 美国-2.22MB/s(Youtube:不良林), server: 38.68.135.18, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇨🇳 中国-7.80MB/s(Youtube:不良林), server: 36.134.156.5, port: 65083, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
-  - {name: 🇨🇳 中国-864.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-387.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-2.57MB/s(Youtube:不良林), server: 116.129.254.177, port: 65034, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
   - {name: 🇨🇳 中国-1.02MB/s(Youtube:不良林), server: 120.233.150.146, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
   - {name: 🇸🇬 新加坡-3.75MB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
@@ -21,13 +21,13 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.58MB/s(Youtube:不良林)
-      - 波兰-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-543.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-864.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-387.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.75MB/s(Youtube:不良林)
@@ -36,13 +36,13 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.58MB/s(Youtube:不良林)
-      - 波兰-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-543.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-864.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-387.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.75MB/s(Youtube:不良林)
@@ -52,13 +52,13 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.58MB/s(Youtube:不良林)
-      - 波兰-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-543.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-864.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-387.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.75MB/s(Youtube:不良林)
@@ -72,13 +72,13 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.58MB/s(Youtube:不良林)
-      - 波兰-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-543.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-864.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-387.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.75MB/s(Youtube:不良林)
@@ -87,13 +87,13 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.58MB/s(Youtube:不良林)
-      - 波兰-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-543.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-864.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-387.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.75MB/s(Youtube:不良林)
@@ -103,13 +103,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.58MB/s(Youtube:不良林)
-      - 波兰-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-543.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-864.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-387.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.75MB/s(Youtube:不良林)
@@ -128,13 +128,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.58MB/s(Youtube:不良林)
-      - 波兰-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-543.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-864.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-387.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.75MB/s(Youtube:不良林)
